WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118091
fourthTier: FTL should support ForwardCheckStructure/ForwardStructureTransitionWatchpoint and doing so shouldn't break V8/crypto
https://bugs.webkit.org/show_bug.cgi?id=118091
Summary
fourthTier: FTL should support ForwardCheckStructure/ForwardStructureTransiti...
Filip Pizlo
Reported
2013-06-26 14:56:18 PDT
Patch forthcoming.
Attachments
the patch
(8.07 KB, patch)
2013-06-26 15:08 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-06-26 15:08:20 PDT
Created
attachment 205528
[details]
the patch
Mark Hahnenberg
Comment 2
2013-06-26 15:14:36 PDT
Comment on
attachment 205528
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=205528&action=review
r=me
> Source/JavaScriptCore/ChangeLog:16 > + strangeness. For example, the FTL relies on the CFA to tell it that we gave on compiling
gave up on
Filip Pizlo
Comment 3
2013-06-26 15:17:18 PDT
Landed in
http://trac.webkit.org/changeset/152036
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug